# Echoctl

./: .env.example  .gitignore  .npmignore  AGENTS.md  AUDIT_FIX_PLAN.xml  BDI-IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEAD_CODE.md  DEPLOYMENT.md  ECHO.md  ECHO.md.template  EXECUTION_BRIEF.md  IMPLEMENTATION_TODO.md  JULES_LAUNCH.md  LAUNCH_SUMMARY.md  LICENSE  PHASE_1_COMPLETION.md  PLUGINS.md  PRD.md  PROVIDER_IMPLEMENTATION_SUMMARY.md  PUBLISH.md  PUBLISH_GITHUB.md  README-typescript.md  README.md  SECURITY.md  SOUL.md  TOOLS.md  WAY_FORWARD.md  WEEK1_JULES_TASKS.md  brute_keys.js  build.sh  echoctl.sh  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test-zero-config.js  (+3 more)
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml  npm-audit.yml  publish.yml
.jules/: bolt.md
PocketForge/: build.gradle.kts  gradle.properties
PocketForge/androidApp/: build.gradle.kts
PocketForge/desktopApp/: build.gradle.kts
PocketForge/shared/: build.gradle.kts
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: cli.ts
client/: index.html
client/src/: App.tsx  const.ts  main.tsx
coverage/: clover.xml  coverage-final.json  lcov.info
docs/: CROSS_PLATFORM_INTEGRATION.md  GEMINI_WORKFLOW_GUIDE.md  PLUGIN_DEVELOPMENT_GUIDE.md
echoctl/: .env.example  README.md  __init__.py  index.ts  package.json  tsconfig.json
echoctl/auth/: index.ts  (+3 more)
examples/: gemini-workflows.sh
server/: index.ts
src/: index.ts
tests/: __init__.py  approvals.test.ts  auth.test.ts  benchmark-multi-file.js  brain.test.ts  config-security.test.ts  executor-security.test.ts  mcp.test.ts  mount.test.ts  multi-file-optimized.test.ts  plugins.test.ts  providers.test.ts  sessions.test.ts  smart-mode.test.ts  system.test.ts  test-multi-file-correctness.js  test_client.py  test_config.py  web.test.ts
(+263 files in other folders)
