[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echoctl"
version = "0.1.0"
description = "CLI Agent for ECHOMEN - Your thoughts. My echo. In the terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "chieji", email = "chieji4thson+github@gmail.com" }
]
keywords = [
    "cli",
    "ai",
    "agent",
    "echomen",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
tui = [
    "textual>=0.47.0",
]

[project.scripts]
echoctl = "echoctl.cmd.main:app"

[project.urls]
Homepage = "https://github.com/chieji/echoctl"
Repository = "https://github.com/chieji/echoctl.git"

[tool.hatch.build.targets.wheel]
packages = ["echoctl"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=echoctl --cov-report=term-missing"
